--- a/airbyte-integrations/connectors/source-nvd/acceptance-test-config.yml
+++ b/airbyte-integrations/connectors/source-nvd/acceptance-test-config.yml
@@ -1,5 +1,5 @@
 connector_image: airbyte/source-nvd:dev
-test_strictness_level: high
+test_strictness_level: low
 acceptance_tests:
   spec:
     tests:
